--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-family: -apple-system, system-ui, sans-serif;
             background-color: var(--bg);
             color: var(--text-main);
             margin: 0; padding: 0;
@@ -41,12 +41,12 @@
         }
 
         .img-container {
-            width: 90px; height: 90px;
+            width: 100px; height: 100px;
             margin: 0 auto 10px;
             border-radius: 50%;
             overflow: hidden;
             border: 2px solid var(--accent);
-            box-shadow: 0 0 15px rgba(255, 77, 109, 0.3);
+            background: #222;
         }
 
         .img-container img { width: 100%; height: 100%; object-fit: cover; }
@@ -61,23 +61,17 @@
         }
         .add-btn:active { background: var(--accent); color: white; }
 
-        /* СТИЛЬ КНОПКИ СВЯЗИ КАК В САЛОНАХ */
+        /* КНОПКА СВЯЗИ КАК В САЛОНАХ */
         .support-btn {
             display: block;
             text-align: center;
             text-decoration: none;
             color: var(--text-sec);
             font-size: 14px;
-            margin: 30px auto 50px;
+            margin: 20px auto 40px;
             padding: 12px;
             border: 1px dashed #333;
             border-radius: 16px;
-            transition: 0.3s;
-        }
-        .support-btn:active {
-            background: rgba(255, 77, 109, 0.1);
-            color: var(--accent);
-            border-color: var(--accent);
         }
 
         #form-page { display: none; padding: 20px; }
@@ -126,6 +120,7 @@
     tg.MainButton.setParams({ color: '#ff4d6d', text_color: '#ffffff' });
 
     let cart = [];
+    // ТВОИ 4 ФОТО
     const products = [
         {id: 1, name: "Букет 'Элегия'", price: 4200, img: "1.jpg"},
         {id: 2, name: "Микс 'Романтика'", price: 3500, img: "2.jpg"},
@@ -137,7 +132,7 @@
     products.forEach(p => {
         catalog.innerHTML += `
             <div class="card">
-                <div class="img-container"><img src="${p.img}" alt="flowers"></div>
+                <div class="img-container"><img src="${p.img}" alt="flower"></div>
                 <div class="card-title">${p.name}</div>
                 <div class="card-price">${p.price}₽</div>
                 <button class="add-btn" onclick="add(${p.id})">В КОРЗИНУ</button>
@@ -149,7 +144,6 @@
         cart.push(p);
         const total = cart.reduce((s, x) => s + x.price, 0);
         tg.MainButton.setText(`ОФОРМИТЬ: ${total}₽`).show();
-        tg.HapticFeedback.impactOccurred('light');
     }
 
     tg.MainButton.onClick(() => {
@@ -159,7 +153,20 @@
             tg.MainButton.setText('ОТПРАВИТЬ ЗАКАЗ');
             tg.BackButton.show();
         } else {
-            sendOrder();
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const addr = document.getElementById('address').value;
+            if (!name || !phone || !addr) return tg.showAlert("Заполни все поля!");
+            
+            const data = {
+                items: cart.map(x => x.name).join(", "),
+                total: cart.reduce((s, x) => s + x.price, 0),
+                name: name,
+                phone: phone,
+                address: addr
+            };
+            tg.sendData(JSON.stringify(data));
+            tg.close();
         }
     });
 
@@ -168,23 +175,6 @@
         document.getElementById('form-page').style.display = 'none';
         tg.BackButton.hide();
     });
-
-    function sendOrder() {
-        const name = document.getElementById('name').value;
-        const phone = document.getElementById('phone').value;
-        const addr = document.getElementById('address').value;
-        if (!name || !phone || !addr) return tg.showAlert("Заполни данные доставки!");
-
-        const data = {
-            items: cart.map(x => x.name).join(", "),
-            total: cart.reduce((s, x) => s + x.price, 0),
-            name: name,
-            phone: phone,
-            address: addr
-        };
-        tg.sendData(JSON.stringify(data));
-        tg.close();
-    }
 </script>
 </body>
 </html>
